tests/baselines/reference/badArrayIndex.errors.txt
badArrayIndex.ts(1,15): error TS2693: 'number' only refers to a type, but is being used as a value here.
badArrayIndex.ts(1,22): error TS1011: An element access expression should take an argument.


==== badArrayIndex.ts (2 errors) ====
    var results = number[];
                  ~~~~~~
!!! error TS2693: 'number' only refers to a type, but is being used as a value here.
                         
!!! error TS1011: An element access expression should take an argument.